--- a/front_page.html
+++ b/front_page.html
@@ -36,9 +36,12 @@
     }
 
     #head1{
+        position: sticky;
         margin-left: 100px;
         margin-right: 100px;
         border-bottom: 1px solid grey;
+        top:0px;
+        background-color: white;
         }
 
         .b4{
@@ -163,8 +166,61 @@
             color: #01a3a4;
         }
         
+        #c1{
+            font-size: medium;
+            margin-left: 200px;
+            color: white;
+        }
+
+        #h3{
+            display: flex;
+            background-color: #01a3a4;
+            width : 100%;
+            height : 40px;
+            color: white;
+        }
+
+       #h1{
+        font-size:medium;
+        margin-left: 600px;
+       }
+       body{
+        margin-top: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+       }
+
+       #c1:hover{
+        color:grey;
+        cursor:grab;
+       }
+
+       #h2{
+        position: sticky;
+        background-color: white;
+        top:100px;
+        width:100%;
+        height: 40px;
+       }
+
+       #h4{
+        position: sticky;
+        background-color: white;
+        top:0px
+       }
+       
 </style>
 <body>
+
+    <div id="h3">
+        <div id="h1">
+            Our 2 New Shampoos are Now Available to Shop!
+        </div>
+        <div id="c1">
+            x close
+        </div>
+    </div>
+    <div id="h4">
     <div id="head1">
         <div id="w2" class="b1">
             <a href="https://www.facebook.com" style="color: black">
@@ -243,7 +299,8 @@
             <li>AMENITIES</li>
         </ul>
     </div>
+</div>
     <script src="front_page.js"></script>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi voluptatem voluptas distinctio illo, voluptatibus repellendus aliquid temporibus modi ullam rem deleniti molestias hic corporis tempore asperiores libero suscipit fuga unde. Inventore reiciendis excepturi, enim atque, quos deleniti distinctio sequi, illum dolor necessitatibus explicabo aperiam animi architecto delectus debitis magnam neque. Neque voluptate obcaecati quos excepturi! Dolorem enim voluptatem, voluptatum tempore sapiente suscipit aperiam perspiciatis, quo praesentium animi, cum eaque consequuntur minima. Assumenda sit alias eligendi tempore, saepe optio id blanditiis, laborum dolorum exercitationem sequi. Impedit saepe accusamus sequi eaque sapiente inventore fuga suscipit minus explicabo, tempora doloribus quae doloremque officiis architecto repudiandae quam. Consequuntur error reiciendis aperiam esse laboriosam pariatur quisquam dolore fugit ut, corrupti exercitationem mollitia voluptatibus odio illum beatae adipisci praesentium aliquid et numquam voluptate voluptatem recusandae, hic animi. Porro fuga, inventore ratione rem illum nesciunt reiciendis tempore dicta neque, dolore harum, debitis velit! Blanditiis deserunt nihil fugiat itaque qui nam eos perferendis asperiores dignissimos ex? Assumenda doloribus aliquam ipsa unde non fuga consectetur, temporibus dolorem cum maiores aut quam nesciunt optio similique architecto accusantium illo in soluta quae ullam deserunt numquam corporis laboriosam? Cum, omnis tempora? Repellat enim necessitatibus in asperiores voluptatum error, excepturi facilis, distinctio tempora accusamus consequuntur fugit reiciendis dolore aspernatur ex ut aliquam tenetur inventore cupiditate commodi! Optio odit reprehenderit provident reiciendis repellat distinctio autem? Ex eum ab iure esse doloribus sapiente provident. Voluptatibus fugit atque non laudantium dolorum modi culpa accusamus officiis tempora veritatis. Perferendis tenetur sapiente quia recusandae repellendus rem corrupti non debitis dolorem officia dolore suscipit quaerat tempore, eligendi rerum sit deserunt. Quisquam nesciunt atque nisi nulla similique odio, laborum quasi! Molestias rem ipsam, vel quam error in debitis enim ab corrupti adipisci excepturi reiciendis ex quos nihil, temporibus est harum laboriosam facilis pariatur explicabo cum doloribus hic odit voluptates? Dolor quae vel in, sed a cum, rerum quibusdam iste velit deserunt cumque? Vel architecto nostrum hic mollitia reiciendis exercitationem rem consequuntur quidem? Et, ab. Sequi autem aliquid reprehenderit eos quasi, veniam harum. Esse eaque amet sunt architecto in ipsum iste libero debitis, ea, molestiae eum fugiat facere? Fugiat, ratione maiores consequatur ex, ipsum quas ullam natus voluptatibus dignissimos cum nostrum, possimus debitis. Quaerat quae corporis officia quam earum facilis pariatur non delectus consequatur deleniti? Necessitatibus qui odio ullam porro aut velit nulla saepe, quia, delectus non iusto quam veniam, voluptatem optio. Unde blanditiis eveniet sapiente repellat quia quo commodi impedit, fugiat veniam ut nisi hic cum repellendus quisquam maxime itaque odit nesciunt praesentium est autem consequatur! Sunt odio nam laborum rerum suscipit quas dolores ad cum porro saepe voluptatibus incidunt non, numquam distinctio vitae sint iste commodi eum dolor facilis aut deleniti quisquam magni. Molestiae obcaecati distinctio dicta earum autem vero commodi iusto tenetur sit nulla. Enim placeat modi, atque dicta quod soluta eos esse? Nihil, dolores placeat? Recusandae, incidunt officiis totam numquam quis a, praesentium eius aperiam nemo inventore ipsa dolor nobis distinctio molestiae natus sint quo dignissimos fugit. Inventore pariatur dolores repudiandae fuga, enim nam sunt error provident doloribus vel ad dignissimos laudantium veritatis quos accusantium necessitatibus quasi deserunt? Molestiae laborum repellat esse quidem nihil dolore quos aut minus obcaecati porro, quis similique dignissimos deleniti iusto accusamus, cum et fugiat ducimus ipsam amet hic eum ad expedita! Quibusdam tenetur atque soluta voluptatem beatae quia unde qui quo aperiam, ea numquam. Inventore, obcaecati, alias dignissimos at odit consequatur labore exercitationem corporis aliquid rerum quae. Cupiditate delectus sed maxime cumque. Assumenda vitae, cum, eius perferendis totam officia dolores ducimus amet ad earum iure fugit, autem numquam consectetur pariatur soluta dicta minima placeat non beatae. Veniam cumque libero doloremque earum quia commodi corrupti hic magnam aspernatur, quod animi asperiores officiis numquam qui mollitia non totam velit voluptatum quisquam voluptates praesentium! Vel facilis nisi harum alias voluptatem maxime tenetur, id minus non eveniet enim esse omnis amet at! Sunt quas eum est eos, aspernatur mollitia repudiandae, quo sequi quis dicta eaque veritatis, alias culpa iure cumque nostrum debitis. Illum dolorem suscipit odit itaque repellendus esse voluptatibus totam et soluta consequuntur recusandae voluptatem aut laboriosam, beatae deserunt optio, nemo voluptates praesentium, natus placeat nihil blanditiis. Id molestias harum vel earum assumenda voluptate dolore iure rem tempora? Minus voluptatibus a, officiis consectetur vel rerum asperiores veniam dolorum distinctio atque accusantium! Sit, temporibus? Dolorum eveniet reiciendis, dignissimos quidem ipsum hic? Dicta ab non minus adipisci commodi libero eveniet pariatur laudantium magnam error rem odit assumenda reiciendis perspiciatis eum voluptates natus blanditiis, fuga, veritatis inventore nihil molestiae deserunt? Eveniet recusandae voluptates dignissimos saepe. Corporis dolores eum adipisci nihil labore optio, nisi natus saepe quod est eos. Veniam sit enim consequuntur eligendi quibusdam quos vitae impedit amet quam culpa tempora dolores, itaque libero fuga, iure ipsa nesciunt recusandae neque, aperiam odit! Repudiandae quis eos officiis aliquam nostrum commodi facere molestiae necessitatibus repellat, sint voluptatem dolore nemo! Harum sunt architecto asperiores? Suscipit quia quam voluptatum quisquam atque at fugit animi rerum. Officiis, velit. Neque quaerat nostrum illum alias deserunt. Iusto asperiores accusamus vero aperiam quae doloribus eum, corporis totam cum. Quam non similique voluptatem recusandae eligendi minima dolore, veniam mollitia rerum architecto, fugiat aperiam quibusdam eaque qui illum quisquam ipsam sed, accusamus harum sapiente facilis doloremque? Earum enim repudiandae cupiditate assumenda maiores aperiam molestias quasi cum quia perspiciatis! Incidunt, sequi! Esse, quis ad porro doloribus voluptates, laudantium animi molestiae, fugit nemo tenetur tempora veniam et mollitia hic. Asperiores ab suscipit incidunt, dolores molestiae repudiandae ducimus possimus! Veritatis est, dolore maiores culpa quaerat fuga, cum autem sint accusantium, natus consectetur! Soluta iure voluptatum mollitia porro deserunt omnis laboriosam fugit, dolor labore dolores, illum repellat facilis, blanditiis consequuntur ea itaque minus repudiandae iusto eveniet! Recusandae distinctio quia at sapiente enim quisquam exercitationem quidem debitis voluptate! Aliquid explicabo blanditiis ratione odit adipisci doloremque ducimus fugiat a minus necessitatibus sed, est illo quas incidunt! Voluptatibus delectus debitis minima expedita consequatur, dolorum porro vel itaque nobis suscipit neque tenetur, aut officia dolore reiciendis sint dignissimos obcaecati adipisci quisquam facere ipsa similique culpa? Iure quod dolor natus voluptas laboriosam voluptate pariatur? Laboriosam, mollitia ullam.
 </body>
-
 </html>
