--- a/front_page.html
+++ b/front_page.html
@@ -207,6 +207,113 @@
         top:0px
        }
        
+       #im2{
+        z-index: -1;
+        position: absolute;
+       }
+
+       .bu1{
+        position: absolute;
+        z-index: 1;
+       }
+
+       #prev{
+        display: none;
+        top:450px;
+        border: 2px solid black;
+        border-radius: 20px;
+        margin-left: 30px;
+        width: 40px;
+        height: 40px;
+        font-size: large;
+        font-weight: bolder;
+        background-color: transparent;
+        animation-name: lo2;
+        animation-duration: 3s;
+        transition-duration: 3s;
+        transition-timing-function: ease-out;
+       }
+
+       #next{
+        display: none;
+        top:450px;
+        border: 2px solid black;
+        border-radius: 20px;
+        margin-left: 95%;
+        width: 40px;
+        height: 40px;
+        font-size: large;
+        font-weight: bolder;
+        background-color: transparent;
+        animation-name: lo1;
+        animation-duration: 3s;
+        transition-duration: 3s;
+        transition-timing-function: ease-out;
+       }
+       @keyframes lo1 {
+        from{
+            margin-left:93%;
+        }
+        to{
+            margin-left: 95%;
+        }
+       }
+
+       @keyframes lo2 {
+        from{
+            margin-left:6%;
+        }
+        to{
+            margin-left: 3%;
+        }
+       }
+
+       #next:hover{
+        background-color: #01a3a4;
+        color: white;
+       }
+
+       #prev:hover{
+        background-color: #01a3a4;
+        color: white;
+       }
+
+       #mus1{
+        height: 15px;
+        width: 15px;
+        background-color: grey;
+        border-radius: 50%;
+        display: inline-block;
+        z-index: 1;
+        position: absolute;
+        top:750px;
+        left: 700px;
+       }
+
+       #mus2{
+        height: 15px;
+        width: 15px;
+        background-color: grey;
+        border-radius: 50%;
+        display: inline-block;
+        z-index: 1;
+        position: absolute;
+        top:750px;
+        left: 725px;
+       }
+
+       #mus3{
+        height: 15px;
+        width: 15px;
+        background-color: grey;
+        border-radius: 50%;
+        display: inline-block;
+        z-index: 1;
+        position: absolute;
+        top:750px;
+        left: 750px;
+       }
+
 </style>
 <body>
 
@@ -298,7 +405,20 @@
         </ul>
     </div>
 </div>
-    <script src="front_page.js"></script>
+
+<div id="im1">
+    <a target="_blank" href="https://www.youtube.com"><img src=" https://conaturalintl.com/cdn/shop/files/2_7758d563-199c-44b8-9f6e-e2da31e9ed8b.png" width="100%" id="w111"/></a>'
+</div>
+
+<button id="next" class="bu1">></button>
+<button id="prev" class="bu1"><</button>
+
+<div id="d11">
+ <div class="ff1" id="mus1"></div>
+ <div class="ff1" id="mus2"></div>
+ <div class="ff1" id="mus3"></div>
+</div>
+
+<script src="front_page.js"></script>
 </body>
 </html>
-
