--- a/front_page.html
+++ b/front_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5ffdf7bf08.js" crossorigin="anonymous"></script>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Caprasimo&family=Inter:wght@300&family=Montserrat:ital,wght@1,600&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <style>
@@ -313,7 +313,74 @@
         top:750px;
         left: 750px;
        }
+       #best{
+        font-size: xx-large;
+        color: #01a3a4;
+        margin-top: 15px;
+        margin-left: 650px;
+        font-family: 'Inter', sans-serif;
+        font-weight:600;
+       }
 
+       #best1{
+        font-size: large;
+        margin-top: 15px;
+        margin-left: 400px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 700;
+        margin-bottom: 15px;
+       }
+
+       #sld1{
+        display: flex;
+        margin-left: 200px;
+        margin-right: 200px;
+        z-index: -1;
+       }
+
+       .move{
+        width: 500px;
+        height: 270px;
+        border: 2px solid black;
+        overflow: hidden;
+        z-index: -1;
+       }
+
+       #fer5{
+        display: none;
+       }
+
+       #fer6{
+        display: none;
+       }
+
+       .bu12{
+        z-index: 1;
+       }
+
+       #prev2{
+        position: absolute;
+        left: 200px;
+        top:1100px;
+       }
+
+       #next2{
+        position: absolute;
+        right: 200px;
+        top:1100px;
+       }
+
+       #fer5{
+        display: none;
+       }
+
+       #fer6{
+        display: none;
+       }
+
+       .cmp{
+        z-index: 2;
+       }
 </style>
 <body>
 
@@ -419,6 +486,39 @@
  <div class="ff1" id="mus3"></div>
 </div>
 
+<div id="best">
+    BEST SELLERS
+</div>
+<div id="best1">
+    The fan favourite skin & hair care products from Pakistan's pioneer organic brand
+</div>
+<div id="sld1">
+<div class="move" id="fer1">
+    <img src="https://conaturalintl.com/cdn/shop/products/Saffronface2_eca5cee2-47ab-458c-a638-c08582e7d5b8.jpg" width="100%" id="i1">
+</div>
+<div class="move" id="fer2">
+<img src="https://conaturalintl.com/cdn/shop/products/Intensegrowthface.jpg" width="100%" id="i2">
+</div>
+<div class="move" id="fer3">
+    <img src="https://conaturalintl.com/cdn/shop/products/Teatreefacewashface.jpg" width="100%" id="i3">
+</div>
+<div class="move" id="fer4">
+    <img src="https://conaturalintl.com/cdn/shop/products/1.-Bottle-Front_c1abd5c4-9cf3-43e3-94ce-80d7e83b4d9a.jpg?v=1664791505&width=900" width="100%" id="i4">
+</div>
+
+<div class="move" id="fer5">
+    <img src="https://conaturalintl.com/cdn/shop/products/Rosefacewashface.jpg" width="100%" id="i5">
+</div>
+
+<div class="move" id="fer6">
+    <img src="https://conaturalintl.com/cdn/shop/products/Hairgrowthshampoo.jpg" width="100%" id="i6">
+ </div>
+
+</div>
+<button id="next2" class="bu12">></button>
+<button id="prev2" class="bu12"><</button>
+
 <script src="front_page.js"></script>
+
 </body>
 </html>
