add heart and setting

--- a/front_page.html
+++ b/front_page.html
@@ -8,8 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Caprasimo&family=Inter:wght@300&family=Montserrat:ital,wght@1,600&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
-    <title>Document</title>
+    <link
+    rel="stylesheet"
+    href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"
+    integrity="INTEGRITY_STRING"
+    crossorigin="anonymous"/>
+    <title>home</title>
 </head>
 <style>
     #w1{
@@ -454,14 +458,109 @@
         text-align: center;
        }
 
-       .se{
-        z-index: 0;
-        position: absolute;
+       .sho{
+        display: none;
+
+       }
+
+       .sho1{
+        display: block;
+        color: black;
        }
 
        #ss0{
+        z-index: 0;
+        position: absolute;
         margin-top: -283px;
-        margin-left: 120px;
+        margin-left: 227px;
+        font-size: x-large;
+       }
+
+       #ss1{
+        z-index: 0;
+        position: absolute;
+        margin-top: -243px;
+        margin-left: 226px;
+        font-size: x-large;
+       }
+
+       #ss2{
+        z-index: 0;
+        position: absolute;
+        margin-top: -283px;
+        margin-left: 227px;
+        font-size: x-large;
+       }
+
+       #ss3{
+        z-index: 0;
+        position: absolute;
+        margin-top: -243px;
+        margin-left: 226px;
+        font-size: x-large;
+       }
+
+       #ss4{
+        z-index: 0;
+        position: absolute;
+        margin-top: -283px;
+        margin-left: 227px;
+        font-size: x-large;
+       }
+
+       #ss5{
+        z-index: 0;
+        position: absolute;
+        margin-top: -243px;
+        margin-left: 226px;
+        font-size: x-large;
+       }
+
+       #ss6{
+        z-index: 0;
+        position: absolute;
+        margin-top: -283px;
+        margin-left: 227px;
+        font-size: x-large;
+       }
+
+       #ss7{
+        z-index: 0;
+        position: absolute;
+        margin-top: -243px;
+        margin-left: 226px;
+        font-size: x-large;
+       }
+
+       #ss8{
+        z-index: 0;
+        position: absolute;
+        margin-top: -283px;
+        margin-left: 227px;
+        font-size: x-large;
+       }
+
+       #ss9{
+        z-index: 0;
+        position: absolute;
+        margin-top: -243px;
+        margin-left: 226px;
+        font-size: x-large;
+       }
+
+       #ss10{
+        z-index: 0;
+        position: absolute;
+        margin-top: -283px;
+        margin-left: 227px;
+        font-size: x-large;
+       }
+
+       #ss11{
+        z-index: 0;
+        position: absolute;
+        margin-top: -243px;
+        margin-left: 226px;
         font-size: x-large;
        }
 
@@ -592,11 +691,12 @@
     <div id="dwq1" class="mj">
         Rs.2,625
     </div>
-    <div id="ss0" class="se">
-        <i class="fa-regular fa-heart" id="ss0" class="se">        
-        </i>
+    <div id="ss0" class="se sho">
+        <i class="fa-sharp fa-light fa-circle-heart"></i>
     </div>
-    <div class="glyphicon glyphicon-wrench" id="ss1" class="se"></div>
+    <div id="ss1" class="se sho">
+        <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+    </div>
 </div>
 <div class="move sp" id="fer2">
 <img src="https://conaturalintl.com/cdn/shop/products/Intensegrowthface.jpg" width="100%" id="i2">
@@ -606,7 +706,12 @@
 <div id="dwq3" class="mj">
     Rs.2,400
 </div>
-
+<div id="ss2" class="se sho">
+    <i class="fa-sharp fa-light fa-circle-heart"></i>
+</div>
+<div id="ss3" class="se sho">
+    <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+</div>
 </div>
 
 <div class="move sp" id="fer3">
@@ -617,6 +722,13 @@
     <div id="dwq5" class="mj">
         From Rs.435
     </div>
+
+    <div id="ss4" class="se sho">
+        <i class="fa-sharp fa-light fa-circle-heart"></i>
+    </div>
+    <div id="ss5" class="se sho">
+        <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+    </div>
 </div>
 <div class="move sp" id="fer4">
     <img src="https://conaturalintl.com/cdn/shop/products/1.-Bottle-Front_c1abd5c4-9cf3-43e3-94ce-80d7e83b4d9a.jpg?v=1664791505&width=900" width="100%" id="i4">
@@ -625,6 +737,13 @@
         </div>
     <div id="dwq7" class="mj">
         Rs.1,199
+    </div>
+
+    <div id="ss6" class="se sho">
+        <i class="fa-sharp fa-light fa-circle-heart"></i>
+    </div>
+    <div id="ss7" class="se sho">
+        <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
 </div>
 
@@ -635,6 +754,13 @@
     <div id="dwq9" class="mj">
         From Rs.485
     </div>
+
+    <div id="ss8" class="se sho">
+        <i class="fa-sharp fa-light fa-circle-heart"></i>
+    </div>
+    <div id="ss9" class="se sho">
+        <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+    </div>
 </div>
 
 <div class="move " id="fer6">
@@ -644,6 +770,13 @@
         Hair Growth Shampoo       </div>
     <div id="dwq11" class="mj">
         Rs.1,615
+    </div>
+
+    <div id="ss10" class="se sho">
+        <i class="fa-sharp fa-light fa-circle-heart"></i>
+    </div>
+    <div id="ss11" class="se sho">
+        <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
 </div>
 
