--- a/front_page.html
+++ b/front_page.html
@@ -571,6 +571,105 @@
        #sw{
         border: 10px solid black;
        }
+
+       #g1s{
+        z-index: 0;
+        position: absolute;
+        margin-top: -102px;
+        width: 140px;
+        margin-left: 60px;
+        border: 1px solid black;
+        border-radius: 15px;
+        height: 40px;
+       }
+
+       #g1{
+        z-index: 0;
+        position: absolute;
+       }
+
+       #g2s{
+        z-index: 0;
+        position: absolute;
+        margin-top: -102px;
+        width: 140px;
+        margin-left: 60px;
+        border: 1px solid black;
+        border-radius: 15px;
+        height: 40px;
+       }
+
+       #g2{
+        z-index: 0;
+        position: absolute;
+       }
+
+       #g3s{
+        z-index: 0;
+        position: absolute;
+        margin-top: -102px;
+        width: 140px;
+        margin-left: 60px;
+        border: 1px solid black;
+        border-radius: 15px;
+        height: 40px;
+       }
+
+       #g3{
+        z-index: 0;
+        position: absolute;
+       }
+
+       #g4s{
+        z-index: 0;
+        position: absolute;
+        margin-top: -102px;
+        width: 140px;
+        margin-left: 60px;
+        border: 1px solid black;
+        border-radius: 15px;
+        height: 40px;
+       }
+
+       #g4{
+        z-index: 0;
+        position: absolute;
+       }
+
+       #g5s{
+        z-index: 0;
+        position: absolute;
+        margin-top: -102px;
+        width: 140px;
+        margin-left: 60px;
+        border: 1px solid black;
+        border-radius: 15px;
+        height: 40px;
+       }
+
+       #g5{
+        z-index: 0;
+        position: absolute;
+       }
+
+       #g6s{
+        z-index: 0;
+        position: absolute;
+        margin-top: -102px;
+        width: 140px;
+        margin-left: 60px;
+        border: 1px solid black;
+        border-radius: 15px;
+        height: 40px;
+       }
+
+       #g6{
+        z-index: 0;
+        position: absolute;
+       }
+
+
+       
 </style>
 <body>
 
@@ -697,6 +796,12 @@
     <div id="ss1" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
+    <div id="g1">
+        <button id="g1s"> 
+            <i class="fa-sharp fa-light fa-cart-shopping"></i>   
+            &nbsp;&nbsp;&nbsp; Add to cart
+        </button>
+    </div>
 </div>
 <div class="move sp" id="fer2">
 <img src="https://conaturalintl.com/cdn/shop/products/Intensegrowthface.jpg" width="100%" id="i2">
@@ -711,6 +816,12 @@
 </div>
 <div id="ss3" class="se sho">
     <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+</div>
+<div id="g2">
+    <button id="g2s"> 
+        <i class="fa-sharp fa-light fa-cart-shopping"></i>   
+        &nbsp;&nbsp;&nbsp; Add to cart
+    </button>
 </div>
 </div>
 
@@ -729,6 +840,12 @@
     <div id="ss5" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
+    <div id="g3">
+        <button id="g3s"> 
+            <i class="fa-sharp fa-light fa-cart-shopping"></i>   
+            &nbsp;&nbsp;&nbsp; Add to cart
+        </button>
+    </div>
 </div>
 <div class="move sp" id="fer4">
     <img src="https://conaturalintl.com/cdn/shop/products/1.-Bottle-Front_c1abd5c4-9cf3-43e3-94ce-80d7e83b4d9a.jpg?v=1664791505&width=900" width="100%" id="i4">
@@ -744,6 +861,12 @@
     </div>
     <div id="ss7" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+    </div>
+    <div id="g4">
+        <button id="g4s"> 
+            <i class="fa-sharp fa-light fa-cart-shopping"></i>   
+            &nbsp;&nbsp;&nbsp; Add to cart
+        </button>
     </div>
 </div>
 
@@ -761,6 +884,12 @@
     <div id="ss9" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
+    <div id="g5">
+        <button id="g5s"> 
+            <i class="fa-sharp fa-light fa-cart-shopping"></i>   
+            &nbsp;&nbsp;&nbsp; Add to cart
+        </button>
+    </div>
 </div>
 
 <div class="move " id="fer6">
@@ -777,6 +906,13 @@
     </div>
     <div id="ss11" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
+    </div>
+
+    <div id="g6">
+        <button id="g6s"> 
+            <i class="fa-sharp fa-light fa-cart-shopping"></i>   
+            &nbsp;&nbsp;&nbsp; Add to cart
+        </button>
     </div>
 </div>
 
