add to cart hover effect

--- a/front_page.html
+++ b/front_page.html
@@ -796,7 +796,7 @@
     <div id="ss1" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
-    <div id="g1">
+    <div id="g1" class="sho">
         <button id="g1s"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
@@ -817,7 +817,7 @@
 <div id="ss3" class="se sho">
     <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
 </div>
-<div id="g2">
+<div id="g2" class="sho">
     <button id="g2s"> 
         <i class="fa-sharp fa-light fa-cart-shopping"></i>   
         &nbsp;&nbsp;&nbsp; Add to cart
@@ -840,7 +840,7 @@
     <div id="ss5" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
-    <div id="g3">
+    <div id="g3" class="sho">
         <button id="g3s"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
@@ -862,7 +862,7 @@
     <div id="ss7" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
-    <div id="g4">
+    <div id="g4" class="sho">
         <button id="g4s"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
@@ -884,7 +884,7 @@
     <div id="ss9" class="se sho">
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
-    <div id="g5">
+    <div id="g5" class="sho">
         <button id="g5s"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
@@ -908,7 +908,7 @@
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
 
-    <div id="g6">
+    <div id="g6" class="sho">
         <button id="g6s"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
