hover each 3 button complete

--- a/front_page.html
+++ b/front_page.html
@@ -669,6 +669,11 @@
        }
 
 
+       .se:hover{
+        background-color: #01a3a4;
+        color: white;
+       }
+       
        
 </style>
 <body>
@@ -797,7 +802,7 @@
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
     <div id="g1" class="sho">
-        <button id="g1s"> 
+        <button id="g1s" class="se"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
         </button>
@@ -817,8 +822,8 @@
 <div id="ss3" class="se sho">
     <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
 </div>
-<div id="g2" class="sho">
-    <button id="g2s"> 
+<div id="g2" class="sho dq">
+    <button id="g2s" class="se"> 
         <i class="fa-sharp fa-light fa-cart-shopping"></i>   
         &nbsp;&nbsp;&nbsp; Add to cart
     </button>
@@ -841,7 +846,7 @@
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
     <div id="g3" class="sho">
-        <button id="g3s"> 
+        <button id="g3s" class="se"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
         </button>
@@ -863,7 +868,7 @@
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
     <div id="g4" class="sho">
-        <button id="g4s"> 
+        <button id="g4s" class="se"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
         </button>
@@ -885,7 +890,7 @@
         <i class="fa-sharp fa-light fa-screwdriver-wrench"></i>
     </div>
     <div id="g5" class="sho">
-        <button id="g5s"> 
+        <button id="g5s" class="se"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
         </button>
@@ -909,7 +914,7 @@
     </div>
 
     <div id="g6" class="sho">
-        <button id="g6s"> 
+        <button id="g6s" class="se"> 
             <i class="fa-sharp fa-light fa-cart-shopping"></i>   
             &nbsp;&nbsp;&nbsp; Add to cart
         </button>
@@ -917,8 +922,8 @@
 </div>
 
 </div>
-<button id="next2" class="bu12">></button>
-<button id="prev2" class="bu12"><</button>
+<button id="next2" class="bu12 sho">></button>
+<button id="prev2" class="bu12 sho"><</button>
 
 <script src="front_page.js"></script>
 </body>
