--- a/front_page.html
+++ b/front_page.html
@@ -672,6 +672,8 @@
        .se:hover{
         background-color: #01a3a4;
         color: white;
+        border-radius: 20px;
+        height: 30px;
        }
        
        
@@ -922,8 +924,12 @@
 </div>
 
 </div>
-<button id="next2" class="bu12 sho">></button>
-<button id="prev2" class="bu12 sho"><</button>
+<button id="next2" class="bu12 sho">
+    >
+</button>
+<button id="prev2" class="bu12 sho">
+    <
+</button>
 
 <script src="front_page.js"></script>
 </body>
